<resources>
    <string name="app_name">Eddy Parcial 2</string>
    <string name="hello_world">Hello World!</string>
    <string name="fecha_formateada">%1$d/%2$d/%3$d</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="desc_logo">Logo de la aplicación</string>
    <string name="registro_usuario">Registro de usuario</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="seleccionar_avatar">Selecciona tu Avatar</string>
    <string name="registrar">Registrar</string>
    <string name="avatar_1">Avatar 1</string>
    <string name="avatar_2">Avatar 2</string>
    <string name="avatar_3">Avatar 3</string>
    <string name="avatar_4">Avatar 4</string>
    <string name="volver">Volver</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta. Iniciar sesión</string>
    <string name = "modificar_usuario">Modificar Usuario</string>
    <string name = "nvNombreUsuario">Nuevo Nombre de Usuario</string>
</resources>
